Alignment Issues FIxed
Changed the alignment by adding padding-right to the certifications section. Also, started working on a new project section.

--- a/css/style.css
+++ b/css/style.css
@@ -477,7 +477,8 @@ header {
 .course-list {
     list-style: none;
     padding-top: 2em;
-    font-size: 1.2em;
+    font-size: 1.2em; 
+    padding-right: 2em; 
 }
 
 .course-list__item {
@@ -489,6 +490,7 @@ header {
 .courses a { 
     color: inherit;
     text-decoration: none;
+    font-weight: var(--fw-bold); 
 }
 
 .courses__link:hover,
@@ -587,3 +589,6 @@ header {
     margin-left: auto; 
     margin-right: auto; 
 }
+
+/* New Project Section */
+
